# m2m-vector-search

./: .gitignore  .pre-commit-config.yaml  ADVANCED_FEATURES.md  ASSETS_STATUS.md  BENCHMARK_REPORT.md  CHANGELOG.md  CHECKLIST.md  CODE_OF_CONDUCT.md  CONFIGURATION.md  CONFIG_RAG.md  CONTRIBUTING.md  DATA_ANALYSIS_REPORT.md  DEVELOPER_DOCS.md  DOCUMENTATION.md  EXECUTIVE_SUMMARY.md  FAILED_TESTS_EXPLANATION.md  FINAL_STATUS.md  LICENSE  M2M_Edge_Cloud_Cluster_Architecture.md  MANIFEST.in  METHODOLOGY_CONCLUSIONS.md  PUBLICATION_CHECKLIST.md  Plan_Implementacion_Grafos_Gaussianos_M2M.md  README.md  RELEASE_NOTES.md  SECURITY.md  SUMMARY.md  TASK_COMPLETION_REPORT.md  TESTING_REPORT.md  USER_GUIDE.md  __init__.py  _push2.ps1  _push3.ps1  _run_tests2.ps1  benchmark_100k.txt  benchmark_results.json  benchmark_results.txt  benchmark_temp_transformed_meta.json  clustering.py  config.py  (+30 more)
.github/workflows/: ci.yml  publish.yml
.test_env/: pyvenv.cfg
.test_env/Scripts/: activate  activate.bat
.test_rc_env/: pyvenv.cfg
.test_rc_env/Scripts/: activate  activate.bat
benchmarks/: benchmark_m2m.py  benchmark_transformer.py  run_benchmark.py  run_cpu_vs_vulkan.py  run_scalability.py  validate_gpu_batch.py
benchmarks/results/: .gitkeep  benchmark_20260224_1745.json  benchmark_20260224_1748.json  benchmark_20260224_1903.json  benchmark_20260304_2235.json  benchmark_20260304_2314.json  benchmark_20260304_2321.json  benchmark_20260304_2353.json  benchmark_20260305_0102.json  benchmark_latest.json
deploy/: Dockerfile  docker-compose.yml
deploy/k8s/: deployment.yaml  service.yaml
docs/: API.md  PERFORMANCE.md  TROUBLESHOOTING.md  cluster.md
examples/: basic_usage.py  langchain_rag.py  llamaindex_rag.py  m2m_training_loop.py  validate_data_lake.py  vulkan_edge_inference.py
integrations/: langchain.py
loaders/: optimized_loader.py
monitoring/: prometheus.yml
scripts/: generate_charts.py  validate_project.py  validate_real_datasets.py
shaders/: moe.comp  moe.spv  moe_batch.comp  moe_batch.spv
src/m2m/: __init__.py  auto_scaling.py  clustering.py  config.py  data_lake.py  dataset_transformer.py  encoding.py  energy.py  engine.py  entity_extractor.py  geometry.py  gpu_auto_tune.py  gpu_hierarchical_search.py  gpu_vector_index.py  graph_splat.py  hrm2_engine.py  lsh_index.py  memory.py  optimized_api.py  query_optimizer.py  splat_types.py  splats.py
src/m2m/api/: coordinator_api.py  edge_api.py
src/m2m/cluster/: __init__.py  aggregator.py  balancer.py  client.py  edge_node.py  health.py  protocol.py  router.py  sharding.py  sync.py
src/m2m/ebm/: __init__.py  energy_api.py  exploration.py  soc.py
src/m2m/storage/: __init__.py  persistence.py  wal.py
src/m2m_vector_search.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: README.md  test_advanced_cluster.py  test_api.py  test_cluster.py  test_crud.py  test_entity_extractor.py  test_langchain.py  test_lsh.py  validate_vulkan.py
