[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "m2m-vector-search"
version = "1.0.0"
authors = [
  { name="Brian Schwabauer" },
]
description = "Machine-to-Memory Edge-Optimized Vector Search Database with Vulkan Compute API"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Database"
]
dependencies = [
    "numpy>=1.21.0",
    "scikit-learn>=1.2.0",
    "pandas>=2.0.0",
    "psutil>=5.8.0",
    "vulkan>=1.3.0"
]

[project.urls]
"Homepage" = "https://github.com/schwabauerbriantomas-gif/m2m-vector-search"
"Bug Tracker" = "https://github.com/schwabauerbriantomas-gif/m2m-vector-search/issues"
