[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "m2m-vector-search"
version = "2.0.3"
authors = [
  { name="Brian Schwabauer" },
]
description = "M2M EBM Vector Database — Energy-Based Model storage with full CRUD, WAL persistence, REST API, and Self-Organized Criticality"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Database"
]
dependencies = [
    "numpy>=1.21.0",
    "scikit-learn>=1.2.0",
    "pandas>=2.0.0",
    "psutil>=5.8.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.0.0",
    "requests>=2.31.0",
    "msgpack>=1.0.0"
]

[project.urls]
"Homepage" = "https://github.com/schwabauerbriantomas-gif/m2m-vector-search"
"Bug Tracker" = "https://github.com/schwabauerbriantomas-gif/m2m-vector-search/issues"

[project.optional-dependencies]
dev = ["pytest", "black", "isort", "mypy", "ruff", "coverage", "httpx", "pytest-asyncio"]
vulkan = ["vulkan>=1.3.0"]
docs = ["mkdocs", "mkdocs-material"]

[tool.black]
target-version = ['py38']

[tool.isort]
profile = "black"
